[gd_scene load_steps=15 format=2]

[ext_resource path="res://src/Actor/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/UserInterface/Controller/ClimbBack.png" type="Texture" id=2]
[ext_resource path="res://src/UserInterface/Transition/Fader.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/Actor/Player/Joystick.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/UserInterface/Controller/RunButton.png" type="Texture" id=9]
[ext_resource path="res://assets/UserInterface/Controller/ActiveRunButton.png" type="Texture" id=11]
[ext_resource path="res://assets/UserInterface/Controller/Pause.png" type="Texture" id=12]
[ext_resource path="res://assets/Font/bahnscrift.tres" type="DynamicFont" id=13]

[sub_resource type="CapsuleMesh" id=1]
radius = 0.5
mid_height = 1.5

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.156863, 0.2, 0.870588, 1 )

[sub_resource type="CapsuleShape" id=3]
radius = 0.5
height = 1.5

[sub_resource type="Animation" id=6]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Head:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 2, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 1, 0 ), Vector3( 0, 1.2, 0 ), Vector3( 0, 1, 0 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Head:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 0.5, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 1, 0 ), Vector3( 0, 1.05, 0 ), Vector3( 0, 1, 0 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "play"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Player" type="KinematicBody"]
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
layers = 2
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
shape = SubResource( 3 )

[node name="Head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )

[node name="Camera" type="Camera" parent="Head"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/ShakeCameraSprint = SubResource( 6 )
anims/ShakeCameraWalk = SubResource( 7 )

[node name="Fader" parent="." instance=ExtResource( 5 )]
visible = false

[node name="Controller" type="CanvasLayer" parent="."]

[node name="LeftContainer" type="Control" parent="Controller"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 77.3738
margin_top = -208.975
margin_right = 205.374
margin_bottom = -80.975
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Joystick" parent="Controller/LeftContainer" instance=ExtResource( 7 )]
position = Vector2( 64, 64 )

[node name="ContainerClimb" type="Control" parent="Controller"]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -368.97
margin_top = -381.038
margin_right = -304.97
margin_bottom = -317.037
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClimbDown" type="TouchScreenButton" parent="Controller/ContainerClimb"]
normal = ExtResource( 2 )
action = "down_climb"

[node name="TopRight" type="Control" parent="Controller"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -309.0
margin_bottom = 196.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pause" type="TouchScreenButton" parent="Controller/TopRight"]
position = Vector2( 247.513, 31.7298 )
normal = ExtResource( 12 )

[node name="Run" type="TouchScreenButton" parent="Controller/TopRight"]
position = Vector2( 211.91, 83.8992 )
normal = ExtResource( 9 )
pressed = ExtResource( 11 )
action = "sprint"

[node name="Objective" type="Label" parent="Controller"]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_left = 11.9122
margin_top = 109.955
margin_right = 328.912
margin_bottom = 142.955
custom_fonts/font = ExtResource( 13 )
text = "Temukan Pintu Keluar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ObjectiveAnim" type="AnimationPlayer" parent="Controller/Objective"]
anims/play = SubResource( 8 )

[node name="TimerClimb" type="Timer" parent="."]

[connection signal="pressed" from="Controller/TopRight/Pause" to="." method="_on_Pause_pressed"]
[connection signal="timeout" from="TimerClimb" to="." method="_on_TimerClimb_timeout"]
